fix: whitespace

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ main {
 
 img {
         display: block;
-        margin: 150px auto 50px auto;
+        margin: 150px auto 50px;
         border: 4px solid rgb(82, 104, 160);
         border-radius: 100%;
         width: 250px;
@@ -75,7 +75,7 @@ table {
         margin: 80px auto;
 }
 
-td, th {
+td , th {
         border: 1px solid rgb(141, 184, 157);
         padding: 10px 20px;
         background-color: rgb(252, 248, 214);
@@ -85,17 +85,17 @@ footer {
         background-color: rgb(141, 184, 157);
         width: 100%;
         text-align: center;
-        padding: 30px; 
-}
+        padding: 30px;
+        }
 
 .links {
-        list-style-type: none;  
-        display: inline;  
-}
+        list-style-type: none;
+        display: inline;
+    }
 
 a {
         color: rgb(252, 248, 214);
-        text-decoration: none;  
+        text-decoration: none;
         font-size: 20px;
 }
 
